--- a/src/main/java/com/mayreh/intellij/plugin/tlaplus/run/ui/TLCModelCheckResultForm.form
+++ b/src/main/java/com/mayreh/intellij/plugin/tlaplus/run/ui/TLCModelCheckResultForm.form
@@ -135,12 +135,14 @@
         <border type="empty"/>
         <children/>
       </grid>
-      <component id="3c599" class="com.intellij.ui.treeStructure.treetable.TreeTable" binding="errorTraceTree" custom-create="true">
+      <grid id="ac497" binding="errorTracePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
           <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="2" use-parent-layout="false"/>
         </constraints>
         <properties/>
-      </component>
+        <border type="empty"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
